# todoist-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.html  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml  release.yml
crates/td/: Cargo.toml
crates/td/src/: cli.rs  dispatch.rs  main.rs
crates/td/src/commands/: add.rs  collaborators.rs  comments.rs  completions.rs  config.rs  delete.rs  done.rs  edit.rs  filters.rs  keyring.rs  labels.rs  list.rs  mod.rs  projects.rs  quick.rs  reminders.rs  reopen.rs  sections.rs  setup.rs  show.rs  sync.rs  today.rs
crates/td/src/output/: comments.rs  filters.rs  helpers.rs  labels.rs  mod.rs  projects.rs  reminders.rs  sections.rs  tasks.rs
crates/td/tests/: cli_e2e.rs
crates/todoist-api/: Cargo.toml
crates/todoist-api/src/: client.rs  client_tests.rs  error.rs  lib.rs  prelude.rs  quick_add.rs  retry.rs
crates/todoist-api/src/models/: common.rs  mod.rs  task.rs
crates/todoist-api/src/sync/: mod.rs  request.rs  response.rs
crates/todoist-api/tests/: api_e2e.rs  comments_e2e.rs  edge_cases_e2e.rs  labels_e2e.rs  project_e2e.rs  quick_add_e2e.rs  quick_add_integration.rs  reminders_e2e.rs  sync_integration.rs  task_lifecycle_e2e.rs  test_context.rs
crates/todoist-cache/: Cargo.toml
crates/todoist-cache/src/: cache_tests.rs  lib.rs  merge.rs  store.rs  sync_manager.rs
crates/todoist-cache/src/filter/: ast.rs  error.rs  evaluator.rs  evaluator_tests.rs  lexer.rs  mod.rs  parser.rs  tests.rs
crates/todoist-cache/src/sync_manager/: lookups.rs  mod.rs  tests.rs
crates/todoist-cache/tests/: cache_e2e.rs  filter_comprehensive_e2e.rs  filter_e2e.rs  store_integration.rs  sync_manager_integration.rs  workflow_e2e.rs
docs/: ARCHITECTURE.md
skills/: README.md
skills/todoist/: SKILL.md
specs/: E2E_TEST_SPEC.md  SPEC.md  assign-task-feature.md
