[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/luoandorder/todoist-rs"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
directories = "5"

# Optional
keyring = "3"
owo-colors = "4"
uuid = { version = "1", features = ["v4"] }

# Workspace crates
todoist-api = { path = "crates/todoist-api" }
todoist-cache = { path = "crates/todoist-cache" }
