[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/luoandorder/todoist-rs"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
directories = "5"
strsim = "0.11"

# Optional
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
owo-colors = "4"
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.11"

# Testing
tempfile = "3"

# Workspace crates
todoist-api-rs = { version = "0.1.1", path = "crates/todoist-api" }
todoist-cache-rs = { version = "0.1.1", path = "crates/todoist-cache" }
