[package]
name = "todoist-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Todoist API client library"

[lib]
name = "todoist_api"
path = "src/lib.rs"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
