[package]
name = "todoist-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Todoist API client library"

[lib]
name = "todoist_api"
path = "src/lib.rs"

[dependencies]
reqwest.workspace = true
tokio = { workspace = true, features = ["time"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"

[dev-dependencies]
wiremock = "0.6"
