[package]
name = "todoist-api-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Todoist API client library"

[lib]
name = "todoist_api_rs"
path = "src/lib.rs"

[features]
default = []
e2e = []

[dependencies]
reqwest.workspace = true
tokio = { workspace = true, features = ["time"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid = { version = "1.0", features = ["v4"] }
serde_urlencoded = "0.7"

[dev-dependencies]
wiremock = "0.6"
