[package]
name = "todoist-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local cache for Todoist data"

[lib]
name = "todoist_cache"
path = "src/lib.rs"

[features]
default = []
e2e = []

[dependencies]
todoist-api.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
directories.workspace = true
strsim.workspace = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
