[package]
name = "todoist-cache-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local cache for Todoist data"

[lib]
name = "todoist_cache_rs"
path = "src/lib.rs"

[features]
default = []
e2e = []

[dependencies]
todoist-api-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
directories.workspace = true
strsim.workspace = true
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
